--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,48 @@ git:
 services:
 - docker
 
+addons:
+  apt:
+    update: true
+    packages:
+    - python3-pip
+
+install:
+- pip3 install -q twine
+- twine --version
+
 before_script:
 - bash -x -e tests/test_ignite/start_ignite.sh
 - bash -x -e tests/test_kafka/kafka_test.sh start kafka
 - bash -x -e tests/test_kinesis/kinesis_test.sh start kinesis
 
-script:
-- docker run -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:14.04 bash -x -e /v/.travis/python.release.sh
-- ls -la dist/*.whl
-- docker run -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:18.04 bash -x -e /v/.travis/install.test.sh
+stages:
+- build
+- install
+
+jobs:
+  include:
+  - stage: build
+    name: "Ubuntu 16.04 Build"
+    script:
+    - docker run -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:16.04 bash -x -e /v/.travis/build.test.sh
+  - stage: build
+    name: "Ubuntu 18.04 Build"
+    script:
+    - docker run -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:18.04 bash -x -e /v/.travis/build.test.sh
+  - stage: install
+    name: "Python, R, Nightly"
+    script:
+    - docker run -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:14.04 bash -x -e /v/.travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
+    - ls -la dist/*.whl
+    - |
+      set -e
+      docker run -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:16.04 bash -x -e /v/.travis/install.test.sh
+      docker run -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:18.04 bash -x -e /v/.travis/install.test.sh
+      if [[ ( ${TRAVIS_BRANCH} == "master" ) && ( ${TRAVIS_EVENT_TYPE} != "pull_request" ) ]]; then
+        ls dist/*.whl
+        twine upload dist/*.whl
+      fi
 
 notifications:
 - email: false
