Enable TF 2.0 preview build
Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,14 @@ jobs:
     - |
       set -e
       export TENSORFLOW_INSTALL="tf-nightly-2.0-preview"
-      docker run -e TENSORFLOW_INSTALL=${TENSORFLOW_INSTALL} -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:18.04 bash -x -e /v/.travis/build.test.sh
+      docker run -e TENSORFLOW_INSTALL=${TENSORFLOW_INSTALL} -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:14.04 bash -x -e /v/.travis/python.release.sh --preview ${TRAVIS_BUILD_NUMBER}
+      ls -la wheelhouse/*.whl
+      docker run -e TENSORFLOW_INSTALL=${TENSORFLOW_INSTALL} -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:18.04 bash -x -e /v/.travis/install.test.sh
+      ls wheelhouse/*.whl
+      if [[ ( ${TRAVIS_BRANCH} == "master" ) && ( ${TRAVIS_EVENT_TYPE} != "pull_request" ) ]]; then
+        twine upload wheelhouse/*-cp27-*.whl
+        twine upload wheelhouse/*-cp36-*.whl
+      fi
   - stage: install
     name: "Python, R, Nightly"
     script:
@@ -59,10 +66,11 @@ jobs:
       export TENSORFLOW_INSTALL="tensorflow==1.13.0rc2"
       docker run -e TENSORFLOW_INSTALL=${TENSORFLOW_INSTALL} -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:14.04 bash -x -e /v/.travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
       ls -la wheelhouse/*.whl
-      docker run -e TENSORFLOW_INSTALL=${TENSORFLOW_INSTALL} -e GITHUB_PAT=${GITHUB_PAT} -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:16.04 bash -x -e /v/.travis/install.test.sh
-      docker run -e TENSORFLOW_INSTALL=${TENSORFLOW_INSTALL} -e GITHUB_PAT=${GITHUB_PAT} -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:18.04 bash -x -e /v/.travis/install.test.sh
+      # Note token is for rate limit only. When regenerate should not grant any access.
+      docker run -e TENSORFLOW_INSTALL=${TENSORFLOW_INSTALL} -e GITHUB_PAT=9eecea9200150af1ec29f70bb067575eb2e56fc7 -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:16.04 bash -x -e /v/.travis/install.test.sh
+      docker run -e TENSORFLOW_INSTALL=${TENSORFLOW_INSTALL} -e GITHUB_PAT=9eecea9200150af1ec29f70bb067575eb2e56fc7 -i -t --rm -v $PWD:/v -w /v  --net=host ubuntu:18.04 bash -x -e /v/.travis/install.test.sh
+      ls wheelhouse/*.whl
       if [[ ( ${TRAVIS_BRANCH} == "master" ) && ( ${TRAVIS_EVENT_TYPE} != "pull_request" ) ]]; then
-        ls wheelhouse/*.whl
         twine upload wheelhouse/*.whl
       fi
 
