--- a/tensorflow_io/video/BUILD
+++ b/tensorflow_io/video/BUILD
@@ -2,13 +2,6 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
-# Note: stub files are generated from Ubuntu 14.0 with
-# `echo '' | g++ -shared -fPIC -x c++ - -o $@`
-filegroup(
-    name = "stub.so",
-    srcs = glob(["kernel/stub/*"]),
-)
-
 cc_binary(
     name = 'python/ops/_video_ops_ffmpeg_3.4.so',
     srcs = [
@@ -19,21 +12,13 @@ cc_binary(
     ],
     includes = ["."],
     linkshared = 1,
-    linkopts = [
-        "-Ltensorflow_io/video/kernels/stub",
-        "-l:libavformat.so.57",
-        "-l:libavcodec.so.57",
-        "-l:libavutil.so.55",
-        "-l:libswscale.so.4",
-    ],
+    linkopts = [],
     deps = [
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
 	"@ffmpeg_3_4//:ffmpeg",
     ],
-    data = [
-        ":stub.so",
-    ],
+    data = [],
     copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
 
@@ -47,21 +32,13 @@ cc_binary(
     ],
     includes = ["."],
     linkshared = 1,
-    linkopts = [
-        "-Ltensorflow_io/video/kernels/stub",
-	"-l:libavformat-ffmpeg.so.56",
-	"-l:libavcodec-ffmpeg.so.56",
-	"-l:libavutil-ffmpeg.so.54",
-	"-l:libswscale-ffmpeg.so.3",
-    ],
+    linkopts = [],
     deps = [
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
 	"@ffmpeg_2_8//:ffmpeg",
     ],
-    data = [
-        ":stub.so",
-    ],
+    data = [],
     copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
 
@@ -75,20 +52,12 @@ cc_binary(
     ],
     includes = ["."],
     linkshared = 1,
-    linkopts = [
-        "-Ltensorflow_io/video/kernels/stub",
-	"-l:libavformat.so.54",
-	"-l:libavcodec.so.54",
-	"-l:libavutil.so.52",
-	"-l:libswscale.so.2",
-    ],
+    linkopts = [],
     deps = [
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
 	"@libav_9_20//:libav",
     ],
-    data = [
-        ":stub.so",
-    ],
+    data = [],
     copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
