--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ install:
   fi
 
 stages:
-- preview
 - install
 - developer
+- preview
 - nightly
 
 jobs:
@@ -33,24 +33,14 @@ jobs:
   # Note the release of the repo build on Ubuntu 14.04.
   - stage: install
     name: "Install Build on Ubuntu 16.04"
-    before_script: &install_build
-    - |
-      echo "bash -x -e .travis/bazel.configure.sh \"${TENSORFLOW_INSTALL}\"" > script.sh
-      echo "bash -x -e .travis/bazel.build.sh" >> script.sh
-      echo "bash -x -e .travis/wheel.configure.sh" >> script.sh
     script:
-    - echo "bash -x -e .travis/wheel.build.sh python python3.5" >> script.sh
-    - cat script.sh
-    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:14.04 bash -x -e script.sh
-    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:16.04 bash -x -e .travis/wheel.test.sh
+    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:14.04 bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" python python3.5
+    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host -e GITHUB_PAT=9eecea9200150af1ec29f70bb067575eb2e56fc7 buildpack-deps:16.04 bash -x -e .travis/wheel.test.sh
   - stage: install
     name: "Install Build on Ubuntu 18.04"
-    before_script: *install_build
     script:
-    - echo "bash -x -e .travis/wheel.build.sh python python3.6" >> script.sh
-    - cat script.sh
-    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:14.04 bash -x -e script.sh
-    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:18.04 bash -x -e .travis/wheel.test.sh
+    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:14.04 bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" python python3.6
+    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host -e GITHUB_PAT=9eecea9200150af1ec29f70bb067575eb2e56fc7 buildpack-deps:18.04 bash -x -e .travis/wheel.test.sh
   # Developer Builds make sure the source code of the repo could be
   # build and run on commodity developer environment (Ubuntu 16.04/18.04).
   - stage: developer
@@ -72,52 +62,47 @@ jobs:
   # Note only Linux (Ubuntu 18.04) and macOS are supported.
   - stage: preview
     name: "TensorFlow 2.0 Preview Build on Linux"
-    before_script: &preview_build
-    - |
-      export TENSORFLOW_INSTALL="tf-nightly-2.0-preview"
-      echo "bash -x -e .travis/bazel.configure.sh \"${TENSORFLOW_INSTALL}\"" > script.sh
-      echo "bash -x -e .travis/bazel.build.sh" >> script.sh
-      echo "bash -x -e .travis/wheel.configure.sh" >> script.sh
     script:
-    - echo "bash -x -e .travis/wheel.build.sh --preview ${TRAVIS_BUILD_NUMBER} python python3.6" >> script.sh
-    - cat script.sh
-    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:14.04 bash -x -e script.sh
+    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:14.04 bash -x -e .travis/python.release.sh tf-nightly-2.0-preview --preview ${TRAVIS_BUILD_NUMBER} python python3.6
     - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:18.04 bash -x -e .travis/wheel.test.sh
+    - |
+      if [[ ( ${TRAVIS_BRANCH} == "master" ) && ( ${TRAVIS_EVENT_TYPE} != "pull_request" ) ]]; then
+        twine upload wheelhouse/*.whl
+      fi
   - stage: preview
     name: "TensorFlow 2.0 Preview Build on macOS"
     os: osx
     osx_image: xcode9
-    before_script: *preview_build
     script:
-    - echo "bash -x -e .travis/wheel.build.sh --preview ${TRAVIS_BUILD_NUMBER} python" >> script.sh
-    - cat script.sh
-    - sudo -H bash -x -e script.sh
+    - sudo -H bash -x -e .travis/python.release.sh tf-nightly-2.0-preview --preview ${TRAVIS_BUILD_NUMBER} python
     - sudo -H bash -x -e .travis/wheel.test.sh
+    - |
+      if [[ ( ${TRAVIS_BRANCH} == "master" ) && ( ${TRAVIS_EVENT_TYPE} != "pull_request" ) ]]; then
+        twine upload wheelhouse/*.whl
+      fi
   # Release Builds is for nightly release.
   # Note Python 2.7, 3.4, 3.5, 3.6 are supported on Linux
   # for Ubuntu 14.04/16.04/18.04, and Python 2.7 for macOS.
   - stage: nightly
     name: "Nightly Release Build on Linux"
-    before_script: &nightly_build
-    - |
-      echo "bash -x -e .travis/bazel.configure.sh \"${TENSORFLOW_INSTALL}\"" > script.sh
-      echo "bash -x -e .travis/bazel.build.sh" >> script.sh
-      echo "bash -x -e .travis/wheel.configure.sh" >> script.sh
     script:
-    - echo "bash -x -e .travis/wheel.build.sh --nightly ${TRAVIS_BUILD_NUMBER} python python3.6" >> script.sh
-    - cat script.sh
-    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:14.04 bash -x -e script.sh
+    - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:14.04 bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" --nightly ${TRAVIS_BUILD_NUMBER} python python3 python3.5 python3.6
     - echo "Skip test for nightly build, as it has been covered in install build"
+    - |
+      if [[ ( ${TRAVIS_BRANCH} == "master" ) && ( ${TRAVIS_EVENT_TYPE} != "pull_request" ) ]]; then
+        twine upload wheelhouse/*.whl
+      fi
   - stage: nightly
     name: "Nightly Release Build on macOS"
     os: osx
     osx_image: xcode9
-    before_script: *preview_build
     script:
-    - echo "bash -x -e .travis/wheel.build.sh --nightly ${TRAVIS_BUILD_NUMBER} python" >> script.sh
-    - cat script.sh
-    - sudo -H bash -x -e script.sh
+    - sudo -H bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" --nightly ${TRAVIS_BUILD_NUMBER} python
     - sudo -H bash -x -e .travis/wheel.test.sh
+    - |
+      if [[ ( ${TRAVIS_BRANCH} == "master" ) && ( ${TRAVIS_EVENT_TYPE} != "pull_request" ) ]]; then
+        twine upload wheelhouse/*.whl
+      fi
 
 notifications:
 - email: false
