Add mising R dependency, and improve the test condition.
Encountered a scneario where all tests are skipped

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ install:
   fi
 
 stages:
-- install
-- developer
+- build
 - preview
 - nightly
 
@@ -31,19 +30,19 @@ jobs:
   # Install Builds make sure the release of the repo could be
   # install and run on commodity user environment (Ubuntu 16.04/18.04).
   # Note the release of the repo build on Ubuntu 14.04.
-  - stage: install
+  - stage: build
     name: "Install Build on Ubuntu 16.04"
     script:
     - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:14.04 bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" python python3.5
     - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host -e GITHUB_PAT=9eecea9200150af1ec29f70bb067575eb2e56fc7 buildpack-deps:16.04 bash -x -e .travis/wheel.test.sh
-  - stage: install
+  - stage: build
     name: "Install Build on Ubuntu 18.04"
     script:
     - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:14.04 bash -x -e .travis/python.release.sh "${TENSORFLOW_INSTALL}" python python3.6
     - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host -e GITHUB_PAT=9eecea9200150af1ec29f70bb067575eb2e56fc7 buildpack-deps:18.04 bash -x -e .travis/wheel.test.sh
   # Developer Builds make sure the source code of the repo could be
   # build and run on commodity developer environment (Ubuntu 16.04/18.04).
-  - stage: developer
+  - stage: build
     name: "Developer Build on Ubuntu 16.04"
     before_script: &developer_build
     - |
@@ -53,7 +52,7 @@ jobs:
     - cat script.sh
     script:
     - docker run -i -t --rm -v $PWD:/v -v $PWD/.cache/pip/:/root/.cache/pip -w /v --net=host buildpack-deps:16.04 bash -x -e script.sh
-  - stage: developer
+  - stage: build
     name: "Developer Build on Ubuntu 18.04"
     before_script: *developer_build
     script:
