Added missing exports of lmdb and tiff datasets

--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -32,11 +32,14 @@ export(iterator_make_initializer)
 export(iterator_string_handle)
 export(kafka_dataset)
 export(kinesis_dataset)
+export(lmdb_dataset)
 export(make_iterator_from_string_handle)
 export(make_iterator_from_structure)
 export(make_iterator_initializable)
 export(make_iterator_one_shot)
 export(make_libsvm_dataset)
+export(mnist_image_dataset)
+export(mnist_label_dataset)
 export(next_batch)
 export(out_of_range_handler)
 export(output_types)
@@ -45,6 +48,7 @@ export(sequence_file_dataset)
 export(tf)
 export(tf_config)
 export(tf_version)
+export(tiff_dataset)
 export(until_out_of_range)
 export(video_dataset)
 export(webp_dataset)
