Added pubsub dataset R wrapper

--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -44,6 +44,7 @@ export(next_batch)
 export(out_of_range_handler)
 export(output_types)
 export(parquet_dataset)
+export(pubsub_dataset)
 export(sequence_file_dataset)
 export(tf)
 export(tf_config)
