--- a/tensorflow_io/text/BUILD
+++ b/tensorflow_io/text/BUILD
@@ -3,11 +3,17 @@ licenses(["notice"])  # Apache 2.0
 package(default_visibility = ["//visibility:public"])
 
 cc_binary(
-    name = 'python/ops/_text_ops.so',
+    name = "python/ops/_text_ops.so",
     srcs = [
-        "kernels/text_sequence.cc",
         "kernels/sequence_ops.h",
+        "kernels/text_sequence.cc",
         "ops/text_ops.cc",
+    ],
+    copts = [
+        "-pthread",
+        "-std=c++11",
+        "-D_GLIBCXX_USE_CXX11_ABI=0",
+        "-DNDEBUG",
     ],
     includes = [
         ".",
@@ -17,5 +23,4 @@ cc_binary(
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
     ],
-    copts = ["-pthread", "-std=c++11", "-D_GLIBCXX_USE_CXX11_ABI=0", "-DNDEBUG"]
 )
